--- a/student.bio.html
+++ b/student.bio.html
@@ -9,7 +9,7 @@
     
 <body>
         <h1>student bio</h1>
-        <img src="70259863_1317789278401095_2204331053445808128_o.jpg" alt="image"height="300px"width="300px">
+        <img src="./70259863_1317789278401095_2204331053445808128_o.jpg" alt="image"height="300px"width="300px">
        
         <p>my name is Mo Joy, i am a loving and outgoing person. i love helping people a lot without expecting anything in return. I am currently attending the UOO coding bootcamp to fullfil the missing peice of my life.
         </p>
